version/0.28/_sources/api/solver/_autosummary/settings/premix_heat_of_comb.rst.txt
:orphan:

.. _premix_heat_of_comb:

premix_heat_of_comb
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.premix_heat_of_comb
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================

Attribute                                                Summary

=========================   ====================================
:ref:`option <option_26>`       Select material property method.

:ref:`value <value_15>`         Specify constant property value.

=========================   ====================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`fluid_child <fluid_child>`                                              'child_object_type' of fluid.

:ref:`volumetric_species_child <volumetric_species_child>`       'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                 'child_object_type' of material.

==========================================================   ==============================================

